[gd_scene load_steps=5 format=3 uid="uid://c0l80l6gvmudk"]

[ext_resource type="Script" path="res://Scripts/Cube.gd" id="1_2dwrx"]
[ext_resource type="PackedScene" uid="uid://c22aafutvdsew" path="res://Sprites/cube.aseprite" id="1_xqvar"]
[ext_resource type="AudioStream" uid="uid://2c26eerijl37" path="res://Audio/coinCollected.wav" id="2_0w50e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jybfh"]
radius = 64.0

[node name="Cube" type="Node2D"]
script = ExtResource("1_2dwrx")

[node name="cube" parent="." instance=ExtResource("1_xqvar")]
position = Vector2(0, -1.90735e-06)
scale = Vector2(2, 2)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_jybfh")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_0w50e")
volume_db = 6.23
pitch_scale = 0.42

[node name="Marker1" type="Marker2D" parent="."]
position = Vector2(64, 0)

[node name="Marker2" type="Marker2D" parent="."]
position = Vector2(48, -48)

[node name="Marker3" type="Marker2D" parent="."]
position = Vector2(-48, -48)

[node name="Marker4" type="Marker2D" parent="."]
position = Vector2(-48, 48)

[node name="Marker5" type="Marker2D" parent="."]
position = Vector2(48, 48)

[node name="Marker6" type="Marker2D" parent="."]
position = Vector2(-64, 0)

[node name="Marker7" type="Marker2D" parent="."]
position = Vector2(0, 64)

[node name="Marker8" type="Marker2D" parent="."]
position = Vector2(0, -64)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
